--- a/template/index.html
+++ b/template/index.html
@@ -68,7 +68,7 @@
         <div class=" row">
           <div class="page-header col-lg-12 col-sm-12 col-md-4 ">
             <span class="text-uppercase page-subtitle">Dashboard</span>
-            <h3 class="page-title">Blog Overview</h3>
+            <h3 class="page-title">Statistics</h3>
           </div>
         </div>
       </div>
