--- a/template/total file/tabel.html
+++ b/template/total file/tabel.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/style2.css">
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
@@ -33,8 +34,7 @@
     <!-- Page Content -->
     <div id="page-content-wrapper" class="total container-fluid">
 
-      <div class="   ">
-        <div class="col-xxl-12 col-12 header ">
+      
           <div class="row header-one ">
             <div class="input-group  header-two">
               <i class="fa fa-search s-icon" aria-hidden="true"></i><input type="text" class="form-control searchengin"
@@ -52,21 +52,215 @@
             </div>
 
           </div>
+      
+      
+      <div class="row">
+        <div class="col-lg col-md-5 col-sm-12 tab">
+          <div class="card">
+            <div class="card-header">Store 1</div>
+            <div class="card-body">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">Breakfast</th>
+                  <th scope="col">Cost</th>
+                  <th scope="col">lunch</th>
+                  <th scope="col">Cost</th>
+                  <th scope="col">Dinner</th>
+                  <th scope="col">Cost</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Idly</td>
+                  <td>10</td>
+                  <td>Meals</td>
+                  <td>90</td>
+                  <td>Rava Dosai</td>
+                  <td>15</td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>Pongal</td>
+                  <td>25</td>
+                  <td>Curd Rice</td>
+                  <td>30</td>
+                  <td>Poori</td>
+                  <td>20</td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td>Appam</td>
+                  <td>18</td>
+                  <td>Lemon Rice</td>
+                  <td>33</td>
+                  <td>chappathi</td>
+                  <td>15</td>
+                </tr>
+              </tbody>
+            </table>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class=" ">
+        
+        <div class="col-lg col-md-5 col-sm-12 tab">
+          <div class="card">
+              <div class="card-header">Store 2</div>
+              <div class="card-body">
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Breakfast</th>
+                      <th scope="col">Cost</th>
+                      <th scope="col">lunch</th>
+                      <th scope="col">Cost</th>
+                      <th scope="col">Dinner</th>
+                      <th scope="col">Cost</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row">1</th>
+                      <td>Onion Dosa</td>
+                      <td>20</td>
+                      <td>Ghee Rice</td>
+                      <td>40</td>
+                      <td>Chappathi</td>
+                      <td>20</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">2</th>
+                      <td>Pongal</td>
+                      <td>25</td>
+                      <td>Meals</td>
+                      <td>60</td>
+                      <td>Parrota</td>
+                      <td>10</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">3</th>
+                      <td>Uthappam</td>
+                      <td>18</td>
+                      <td>Tomato rice</td>
+                      <td>33</td>
+                      <td>Idly vada</td>
+                      <td>18</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        
+        
+        <div class="col-lg col-md-5 col-sm-12 tab">
+          <div class="card">
+              <div class="card-header">Store 3</div>
+              <div class="card-body">
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Breakfast</th>
+                      <th scope="col">Cost</th>
+                      <th scope="col">lunch</th>
+                      <th scope="col">Cost</th>
+                      <th scope="col">Dinner</th>
+                      <th scope="col">Cost</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row">1</th>
+                      <td>Poori</td>
+                      <td>18</td>
+                      <td>Meals</td>
+                      <td>75</td>
+                      <td>Ragi Dosai</td>
+                      <td>15</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">2</th>
+                      <td>Pongal</td>
+                      <td>35</td>
+                      <td>Friedrice</td>
+                      <td>90</td>
+                      <td>Ghee Roast</td>
+                      <td>35</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">3</th>
+                      <td>Idiyappam</td>
+                      <td>40</td>
+                      <td>Briyani</td>
+                      <td>80</td>
+                      <td>Whaet Dosai</td>
+                      <td>30</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            
+          </div>
+        </div>
+        <div class="col-lg col-md-5 col-sm-12 tab">
+          <div class="card">
+              <div class="card-header">Store 4</div>
+              <div class="card-body">
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Breakfast</th>
+                      <th scope="col">Cost</th>
+                      <th scope="col">lunch</th>
+                      <th scope="col">Cost</th>
+                      <th scope="col">Dinner</th>
+                      <th scope="col">Cost</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row">1</th>
+                      <td>uthappam</td>
+                      <td>30</td>
+                      <td>Meals</td>
+                      <td>80</td>
+                      <td>Idly Vada</td>
+                      <td>20</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">2</th>
+                      <td>Pongal</td>
+                      <td>22</td>
+                      <td>Briyani</td>
+                      <td>50</td>
+                      <td>Kothu Parotta</td>
+                      <td>10</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">3</th>
+                      <td>Ghee Roast</td>
+                      <td>28</td>
+                      <td>mutton Briyani</td>
+                      <td>120</td>
+                      <td>Onion Dosa</td>
+                      <td>15</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            
+          </div>
+        </div>
+        </div>
         
       </div>
       
-
-        
-      </div>
-
-
-
-
-
-
+   
 
 
     </div>
