dashboard-chart-tables

--- a/template/index.html
+++ b/template/index.html
@@ -169,237 +169,17 @@
 
         </div>
         <div class="col-lg col-sm-12 col-md-5 deliver">
-          <div class="card-header border-bottom">
-            <h6 class="m-0">sales</h6>
+          <div class="col-12 card-header border-bottom bg-white">
+            <h6 class="m-0">MOST CUSTOMER AREAS</h6>
           </div>
+          <div id="pie" style="width: 500px; height: 300px;">
 
-          <div class="col-xl-12">
-            <div class="card">
-              <div class="card-header border-0 pb-0 d-sm-flex d-block">
-                <div>
-                  <h4 class="card-title mb-1">Trending Items</h4>
-                  <small class="mb-0">Continuesly buy items for customer</small>
-                </div>
-                <div class="dropdown mt-3 mt-sm-0">
-                  <button type="button" class="btn btn-primary dropdown-toggle light fs-14" data-toggle="dropdown"
-                    aria-expanded="false">
-                    Weekly
-                  </button>
-                  <div class="dropdown-menu" x-placement="bottom-start"
-                    style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 43px, 0px);">
-                    <a class="dropdown-item" href="javascript:void(0);">Daily</a>
-                    <a class="dropdown-item" href="javascript:void(0);">Weekly</a>
-                    <a class="dropdown-item" href="javascript:void(0);">Monthly</a>
-                  </div>
-                </div>
-              </div>
-              <div class="card-body p-0 pt-3">
-                <div class="media items-list-1">
-                  <span class="number col-1 px-0 align-self-center">#1</span>
-                  <a href="ecom-product-detail.html"><img class="img-fluid rounded mr-3" width="85"
-                      src="../template/image/briyani.jpg" alt="DexignZone"></a>
-                  <div class="media-body col-sm-4 col-6 col-xxl-5 px-0">
-                    <h5 class="mt-0 mb-3"><a class="text-black" href="ecom-product-detail.html">CHICKEN BRIYANI</a></h5>
-                    <small class="font-w500"><strong class="text-secondary mr-2">$150</strong> <a class="text-primary"
-                        href="javascript:void(0);">BRIYANI</a></small>
-                  </div>
-                  <div class="media-footer ml-auto col-3 px-0 d-flex align-self-center align-items-center">
-                    <div class="mr-3">
-                      <span class="peity-success" data-style="width:100%;" style="display: none;">0,2,1,4</span><svg
-                        class="peity" height="30" width="47">
-                        <polygon fill="rgba(48, 194, 89, .2)"
-                          points="0 28.5 0 28.5 15.666666666666666 15 31.333333333333332 21.75 47 1.5 47 28.5">
-                        </polygon>
-                        <polyline fill="none" points="0 28.5 15.666666666666666 15 31.333333333333332 21.75 47 1.5"
-                          stroke="#30c259" stroke-width="3" stroke-linecap="square"></polyline>
-                      </svg>
-                    </div>
-                    <div>
-                      <h3 class="mb-0 font-w600 text-black">524</h3>
-                      <span class="fs-14">Sales (12%)</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="media items-list-1">
-                  <span class="number col-1 px-0 align-self-center">#2</span>
-                  <a href="ecom-product-detail.html"><img class="img-fluid rounded mr-3" width="85"
-                      src="./images/dish/pic2.jpg" alt="DexignZone"></a>
-                  <div class="media-body col-sm-4 col-6 col-xxl-5 px-0">
-                    <h5 class="mt-0 mb-3 text-black"><a class="text-black" href="ecom-product-detail.html">Tuna soup
-                        spinach with himalaya salt</a></h5>
-                    <small class="font-w500"><strong class="text-secondary mr-2">$12.56</strong> <a class="text-primary"
-                        href="javascript:void(0);">JUICE</a></small>
-                  </div>
-                  <div class="media-footer ml-auto col-3 px-0 d-flex align-self-center align-items-center">
-                    <div class="mr-3">
-                      <span class="peity-danger" data-style="width:100%;" style="display: none;">4,1,2,0</span><svg
-                        class="peity" height="30" width="47">
-                        <polygon fill="rgba(248, 79, 78, .2)"
-                          points="0 28.5 0 1.5 15.666666666666666 21.75 31.333333333333332 15 47 28.5 47 28.5">
-                        </polygon>
-                        <polyline fill="none" points="0 1.5 15.666666666666666 21.75 31.333333333333332 15 47 28.5"
-                          stroke="#f84f4e" stroke-width="3" stroke-linecap="square"></polyline>
-                      </svg>
-                    </div>
-                    <div>
-                      <h3 class="mb-0 font-w600 text-black">215</h3>
-                      <span class="fs-14">Sales (12%)</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="media items-list-1">
-                  <span class="number col-1 px-0 align-self-center">#3</span>
-                  <a href="ecom-product-detail.html"><img class="img-fluid rounded mr-3" width="85"
-                      src="./images/dish/pic3.jpg" alt="DexignZone"></a>
-                  <div class="media-body col-sm-4 col-6 col-xxl-5 px-0">
-                    <h5 class="mt-0 mb-3 text-black"><a class="text-black" href="ecom-product-detail.html">Chicken curry
-                        special with cucumber</a></h5>
-                    <small class="font-w500"><strong class="text-secondary mr-2">$12.56</strong> <a class="text-primary"
-                        href="javascript:void(0);">PIZZA</a></small>
-                  </div>
-                  <div class="media-footer ml-auto col-3 px-0 d-flex align-self-center align-items-center">
-                    <div class="mr-3">
-                      <span class="peity-success" data-style="width:100%;" style="display: none;">0,2,1,4</span><svg
-                        class="peity" height="30" width="47">
-                        <polygon fill="rgba(48, 194, 89, .2)"
-                          points="0 28.5 0 28.5 15.666666666666666 15 31.333333333333332 21.75 47 1.5 47 28.5">
-                        </polygon>
-                        <polyline fill="none" points="0 28.5 15.666666666666666 15 31.333333333333332 21.75 47 1.5"
-                          stroke="#30c259" stroke-width="3" stroke-linecap="square"></polyline>
-                      </svg>
-                    </div>
-                    <div>
-                      <h3 class="mb-0 font-w600 text-black">524</h3>
-                      <span class="fs-14">Sales (12%)</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="media items-list-1">
-                  <span class="number col-1 px-0 align-self-center">#4</span>
-                  <a href="ecom-product-detail.html"><img class="img-fluid rounded mr-3" width="85"
-                      src="./images/dish/pic4.jpg" alt="DexignZone"></a>
-                  <div class="media-body col-sm-4 col-6 col-xxl-5 px-0">
-                    <h5 class="mt-0 mb-3 text-black"><a class="text-black" href="ecom-product-detail.html">Watermelon
-                        juice with ice</a></h5>
-                    <small class="font-w500"><strong class="text-secondary mr-2">$12.56</strong> <a class="text-primary"
-                        href="javascript:void(0);">PIZZA</a></small>
-                  </div>
-                  <div class="media-footer ml-auto col-3 px-0 d-flex align-self-center align-items-center">
-                    <div class="mr-3">
-                      <span class="peity-success" data-style="width:100%;" style="display: none;">0,2,1,4</span><svg
-                        class="peity" height="30" width="47">
-                        <polygon fill="rgba(48, 194, 89, .2)"
-                          points="0 28.5 0 28.5 15.666666666666666 15 31.333333333333332 21.75 47 1.5 47 28.5">
-                        </polygon>
-                        <polyline fill="none" points="0 28.5 15.666666666666666 15 31.333333333333332 21.75 47 1.5"
-                          stroke="#30c259" stroke-width="3" stroke-linecap="square"></polyline>
-                      </svg>
-                    </div>
-                    <div>
-                      <h3 class="mb-0 font-w600 text-black">76</h3>
-                      <span class="fs-14">Sales (12%)</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="media items-list-1">
-                  <span class="number col-1 px-0 align-self-center">#5</span>
-                  <a href="ecom-product-detail.html"><img class="img-fluid rounded mr-3" width="85"
-                      src="./images/dish/pic5.jpg" alt="DexignZone"></a>
-                  <div class="media-body col-sm-4 col-6 col-xxl-5 px-0">
-                    <h5 class="mt-0 mb-3 text-black"><a class="text-black" href="ecom-product-detail.html">Tuna soup
-                        spinach with himalaya salt</a></h5>
-                    <small class="font-w500"><strong class="text-secondary mr-2">$12.56</strong> <a class="text-primary"
-                        href="javascript:void(0);">BURGER</a></small>
-                  </div>
-                  <div class="media-footer ml-auto col-3 px-0 d-flex align-self-center align-items-center">
-                    <div class="mr-3">
-                      <span class="peity-danger" data-style="width:100%;" style="display: none;">4,1,2,0</span><svg
-                        class="peity" height="30" width="47">
-                        <polygon fill="rgba(248, 79, 78, .2)"
-                          points="0 28.5 0 1.5 15.666666666666666 21.75 31.333333333333332 15 47 28.5 47 28.5">
-                        </polygon>
-                        <polyline fill="none" points="0 1.5 15.666666666666666 21.75 31.333333333333332 15 47 28.5"
-                          stroke="#f84f4e" stroke-width="3" stroke-linecap="square"></polyline>
-                      </svg>
-                    </div>
-                    <div>
-                      <h3 class="mb-0 font-w600 text-black">180</h3>
-                      <span class="fs-14">Sales (12%)</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
+         
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-lg-10 col-sm-4 col-md-5 table-one">
-          <table class="table table-hover">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Name</th>
-                <th scope="col">Store-Name</th>
-                <th scope="col">Address</th>
-                <th scope="col">Contact</th>
-
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Tamil-food</td>
-                <td>N.o:20,north street,chathram</td>
-                <td>123456789</td>
-
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-                <td>123456789</td>
-
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>Larry the Bird</td>
-                <td>Thornton</td>
-                <td>@twitter</td>
-                <td>123456789</td>
-
-              </tr>
-              <tr>
-                <th scope="row">4</th>
-                <td>Larry the Bird</td>
-                <td>Thornton</td>
-                <td>@twitter</td>
-                <td>123456789</td>
-
-              </tr>
-              <tr>
-                <th scope="row">5</th>
-                <td>Larry the Bird</td>
-                <td>Thornton</td>
-                <td>@twitter</td>
-                <td>123456789</td>
-
-              </tr>
-              <tr>
-                <th scope="row">6</th>
-                <td>Larry the Bird</td>
-                <td>Thornton</td>
-                <td>@twitter</td>
-                <td>123456789</td>
-
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
+ 
 
 
 
@@ -542,6 +322,55 @@
     };
 
     charttwo.setOption(option);
+  </script>
+   <script type="text/javascript">
+    // based on prepared DOM, initialize echarts instance
+   
+    var myChart = echarts.init(document.getElementById('pie'));
+   // specify chart configuration item and data
+   var option={
+    
+  tooltip: {
+      trigger: 'item',
+      formatter: '{a} <br/>{b} : {c} ({d}%)'
+  },
+  legend: {
+      orient: 'vertical',
+      left: 'left',
+      data: ['Tvl','Alangulam','Thoothukudi','Nagercoil']
+  },
+  series: [
+      {
+          name: 'User',
+          type: 'pie',
+          radius: '55%',
+          center: ['50%', '60%'],
+          data: [
+              {value: 335, name: 'Tirunelveli'},
+              {value: 310, name: 'Alangulam'},
+              {value: 234, name: 'thootukudi'},
+              {value: 135, name: 'Nagercoil'},
+              
+          ],
+          emphasis: {
+              itemStyle: {
+                  shadowBlur: 10,
+                  shadowOffsetX: 0,
+                  shadowColor: 'rgba(0, 0, 0, 0.5)'
+              }
+          }
+      }
+  ]
+};
+
+    // use configuration item and data specified to show chart
+    myChart.setOption(option);
+   
+  </script>
+
+    // use configuration item and data specified to show chart
+    myChart.setOption(option);
+   
   </script>
 
 
