--- a/template/style/style.css
+++ b/template/style/style.css
@@ -155,3 +155,14 @@ background-color: white;
    
     /* margin-left: 10px; */
 }
+.prof{
+    width: 15rem;
+}
+.user .user-pic{
+    box-shadow: 0 5px 0 rgba(90,97,105,.11), 0 4px 8px rgba(90,97,105,.12), 0 10px 10px rgba(90,97,105,.06), 0 7px 70px rgba(90,97,105,.1) ;
+
+    border-radius: 10px;
+}
+.user-1{
+    margin-top:20px;
+}
