--- a/template/total file/events.html
+++ b/template/total file/events.html
@@ -64,8 +64,8 @@
       <div class="row">
     
 
-          <div class="col-xl-12">
-            <div class="card">
+          <div class="col-xl-12 col-sm-12 col-md-5 user user-1">
+            <div class="card user-pic">
               <div class="card-header border-0 pb-0 d-sm-flex d-block">
                 <div>
                   <h4 class="card-title mb-1">Trending Items</h4>
