--- a/template/total file/foodlist.html
+++ b/template/total file/foodlist.html
@@ -72,36 +72,21 @@
         <!-- End Page Header -->
         <!-- Default Light Table -->
         <div class="row">
-          <div class="col-lg-4">
-            <div class="card card-small mb-4 pt-3">
-              <div class="card-header border-bottom text-center">
-                <div class="mb-3 mx-auto">
-                  <img class="rounded-circle" src="images/avatars/0.jpg" alt="User Avatar" width="110">
-                </div>
-                <h4 class="mb-0">Sierra Brooks</h4>
-                <span class="text-muted d-block mb-2">Project Manager</span>
-                <button type="button" class="mb-2 btn btn-sm btn-pill btn-outline-primary mr-2"><i class="material-icons mr-1">person_add</i>Follow</button>
+          <div class="col-lg-4 user">
+            <div class="card user-pic">
+              <div class="card-header">Profile Picture</div>
+              <div class="card-body text-center">
+                  <!-- Profile picture image-->
+                  <img class="img-account-profile rounded-circle mb-2 prof" src="../image/prof-1.png" alt="">
+                  <!-- Profile picture help block-->
+                  <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
+                  <!-- Profile picture upload button-->
+                  <button class="btn btn-primary" type="button">Upload new image</button>
               </div>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item px-4">
-                  <div class="progress-wrapper">
-                    <strong class="text-muted d-block mb-2">Workload</strong>
-                    <div class="progress progress-sm">
-                      <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="74" aria-valuemin="0" aria-valuemax="100" style="width: 74%;">
-                        <span class="progress-value">74%</span>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li class="list-group-item p-4">
-                  <strong class="text-muted d-block mb-2">Description</strong>
-                  <span>once visit our store .then you will never leave .we are providing delicious foods </span>
-                </li>
-              </ul>
-            </div>
           </div>
-          <div class="col-lg-8">
-            <div class="card card-small mb-4">
+          </div>
+          <div class="col-lg-8 user">
+            <div class="card card-small mb-4 user-pic">
               <div class="card-header border-bottom">
                 <h6 class="m-0">Account Details</h6>
               </div>
