dashboard-chart-tables

--- a/template/index.html
+++ b/template/index.html
@@ -21,19 +21,19 @@
 
     <!-- Sidebar -->
     <div class=" border-right side-nav " id="sidebar-wrapper ">
-      <div class="sidebar-heading text-center  side-header">FOODIE </div>
+      <div class="sidebar-heading text-center page-title  side-header"> <img src="image/logo.jpg" alt="" srcset=""> FOODIE </div>
       <div class="list-group list-group-flush">
         <a href="index.html" class="list-group-item list-group-item-action  side-nav-one"><i
             class="fa fa-pencil side-icon" aria-hidden="true"></i>Dash board</a>
         <a href="total file/tabel.html" class="list-group-item list-group-item-action  side-nav-one"><i
             class="fa fa-tasks side-icon" aria-hidden="true"></i>Short cuts</a>
-        <a href="" class="list-group-item list-group-item-action  side-nav-one"><i
-            class="fa fa-file-text-o side-icon" aria-hidden="true"></i>Over view</a>
+        <a href="total file/tabel.html" class="list-group-item list-group-item-action  side-nav-one"><i
+            class="fa fa-file-text-o side-icon" aria-hidden="true"></i>Store List</a>
         <a href="total file/events.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-table side-icon"
             aria-hidden="true"></i>Events</a>
         <a href="total file/foodlist.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-user side-icon"
             aria-hidden="true"></i>Profile</a>
-        <a href="#" class="list-group-item list-group-item-action  side-nav-one">Status</a>
+       
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
@@ -66,9 +66,9 @@
       <div class=" dashboard  ">
 
         <div class=" row">
-          <div class="page-header col-lg-12 col-sm-12 col-md-4 ">
-            <span class="text-uppercase page-subtitle">Dashboard</span>
-            <h3 class="page-title">Blog Overview</h3>
+          <div class=" col-lg-12 col-sm-12 col-md-4 ">
+            <span class="text-uppercase page-subtitle ">Dashboard</span>
+            <h3 class="page-title">Satistics</h3>
           </div>
         </div>
       </div>
@@ -78,7 +78,7 @@
           <div class="card text-center post">
             <div class="card-body ">
 
-              <span class="title">POSTS</span>
+              <span class="title">USERS</span>
               <h5 class="card-title ">2,290</h5>
               <span class="stats-small__percentage stats-small__percentage--increase"><img src="./image/download.svg"
                   alt="" srcset=""> 4.7%</span>
@@ -88,7 +88,7 @@
         <div class="col-lg col-md-4 col-sm-12  boxshow-1">
           <div class="card text-center post">
             <div class="card-body ">
-              <span class="title">PAGES</span>
+              <span class="title">STORES</span>
               <h5 class="card-title">182</h5>
               <span class="stats-small__percentage stats-small__percentage--increase"> <img src="./image/download.svg"
                   alt="" srcset=""> 4.7%</span>
@@ -101,7 +101,7 @@
           <div class="card text-center post ">
             <div class="card-body">
               <span class="title">COMMENTS</span>
-              <h5 class="card-title ">8,147</h5>
+              <h5 class="card-title ">3,435</h5>
               <span class="stats-small__percentage stats-small__percentage--increase">4.7%</span>
             </div>
           </div>
@@ -109,7 +109,7 @@
         <div class="col-lg col-md-4 col-sm-12 boxshow-1">
           <div class="card text-center post">
             <div class="card-body">
-              <span class="title">USERS</span>
+              <span class="title">nothing</span>
               <h5 class="card-title">2,412</h5>
               <span class="stats-small__percentage stats-small__percentage--increase "><img src="./image/download.svg"
                   alt="" srcset=""> 4.7%</span>
@@ -368,8 +368,7 @@
    
   </script>
 
-    // use configuration item and data specified to show chart
-    myChart.setOption(option);
+    
    
   </script>
 
