--- a/template/total file/events.html
+++ b/template/total file/events.html
@@ -21,19 +21,19 @@
 
     <!-- Sidebar -->
     <div class=" border-right side-nav " id="sidebar-wrapper ">
-      <div class="sidebar-heading text-center  side-header">FOODIE </div>
+      <div class="sidebar-heading text-center  side-header"><img src="../image/logo.jpg" alt="" srcset="">FOODIE </div>
       <div class="list-group list-group-flush">
         <a href="../index.html" class="list-group-item list-group-item-action  side-nav-one"><i
             class="fa fa-pencil side-icon" aria-hidden="true"></i>Dash board</a>
         <a href="" class="list-group-item list-group-item-action  side-nav-one"><i
             class="fa fa-tasks side-icon" aria-hidden="true"></i>Short cuts</a>
-        <a href="" class="list-group-item list-group-item-action  side-nav-one"><i
-            class="fa fa-file-text-o side-icon" aria-hidden="true"></i>Over view</a>
+        <a href="tabel.html" class="list-group-item list-group-item-action  side-nav-one"><i
+            class="fa fa-file-text-o side-icon" aria-hidden="true"></i>Store List</a>
         <a href="events.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-table side-icon"
             aria-hidden="true"></i>Events</a>
         <a href="foodlist.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-user side-icon"
             aria-hidden="true"></i>Profile</a>
-        <a href="#" class="list-group-item list-group-item-action  side-nav-one">Status</a>
+        <!-- <a href="#" class="list-group-item list-group-item-action  side-nav-one">Status</a> -->
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
