--- a/template/total file/tabel.html
+++ b/template/total file/tabel.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
-    <link rel="stylesheet" href="../style/style.css">
-    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <title>Dashboard</title>
+  <link rel="stylesheet" href="../style/style.css">
+  <link rel="stylesheet" href="../style/style2.css">
+  <!-- <link rel="stylesheet" href="./style/style.css"> -->
+  <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
+
 <body>
   <div class="d-flex t-one" id="wrapper">
 
     <!-- Sidebar -->
-    <div class=" border-right side-nav" id="sidebar-wrapper ">
-      <div class="sidebar-heading text-center  side-header">FOODIE </div>
+    <div class=" border-right side-nav " id="sidebar-wrapper ">
+      <div class="sidebar-heading text-center page-title  side-header"> <img src="../image/logo.jpg" alt="" srcset=""> FOODIE </div>
       <div class="list-group list-group-flush">
-        <a href="index.html" class="list-group-item list-group-item-action  side-nav-one"><i
+        <a href="../index.html" class="list-group-item list-group-item-action  side-nav-one"><i
             class="fa fa-pencil side-icon" aria-hidden="true"></i>Dash board</a>
-        <a href="total file/tabel.html" class="list-group-item list-group-item-action  side-nav-one"><i
+        <a href="" class="list-group-item list-group-item-action  side-nav-one"><i
             class="fa fa-tasks side-icon" aria-hidden="true"></i>Short cuts</a>
-        <a href="total file/foodlist.html" class="list-group-item list-group-item-action  side-nav-one"><i
-            class="fa fa-file-text-o side-icon" aria-hidden="true"></i>Over view</a>
-        <a href="#" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-table side-icon"
+        <a href="tabel.html" class="list-group-item list-group-item-action  side-nav-one"><i
+            class="fa fa-file-text-o side-icon" aria-hidden="true"></i>Store List</a>
+        <a href="events.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-table side-icon"
             aria-hidden="true"></i>Events</a>
-        <a href="#" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-user side-icon"
+        <a href="foodlist.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-user side-icon"
             aria-hidden="true"></i>Profile</a>
-        <a href="#" class="list-group-item list-group-item-action  side-nav-one">Status</a>
+      
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
@@ -33,34 +42,232 @@
     <!-- Page Content -->
     <div id="page-content-wrapper" class="total container-fluid">
 
-      <div class="   ">
-        <div class="col-xxl-12 col-12 header ">
-          <div class="row header-one ">
-            <div class="input-group  header-two">
-              <i class="fa fa-search s-icon" aria-hidden="true"></i><input type="text" class="form-control searchengin"
-                placeholder="Search for something..." aria-label="Recipient's username with two button addons"
-                aria-describedby="button-addon4">
-              <div class="input-group-append input-text-grp bell-icon" id="button-addon4">
-                <div class="b-bor">
-                  <a href="http://"><i class="fa fa-bell b-icon " aria-hidden="true"></i><span
-                      class="badge badge-pill badge-danger">2</span></a>
-                </div>
-                <div class="down">
-                  <h6>About-Us</h6>
-                </div>
-              </div>
-            </div>
 
+
+      <div class="row header-one ">
+        <div class="input-group sticky-top bg-white  header-two">
+          <i class="fa fa-search s-icon" aria-hidden="true"></i><input type="text" class="form-control searchengin"
+            placeholder="Search for something..." aria-label="Recipient's username with two button addons"
+            aria-describedby="button-addon4">
+          <div class="input-group-append input-text-grp bell-icon" id="button-addon4">
+            <div class="b-bor">
+              <a href="http://"><i class="fa fa-bell b-icon " aria-hidden="true"></i><span
+                  class="badge badge-pill badge-danger">2</span></a>
+            </div>
+            <div class="down">
+              <h6>About-Us</h6>
+            </div>
           </div>
         </div>
-      </div>
-      <div class=" ">
-        
-      </div>
-      
 
-        
       </div>
+
+      <div class="row">
+        <div class="col-lg col-md-5 col-sm-12 tab">
+          <div class="card">
+            <div class="card-header">Store 1</div>
+            <div class="card-body">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">Breakfast</th>
+                  <th scope="col">Cost</th>
+                  <th scope="col">lunch</th>
+                  <th scope="col">Cost</th>
+                  <th scope="col">Dinner</th>
+                  <th scope="col">Cost</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Idly</td>
+                  <td>10</td>
+                  <td>Meals</td>
+                  <td>90</td>
+                  <td>Rava Dosai</td>
+                  <td>15</td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>Pongal</td>
+                  <td>25</td>
+                  <td>Curd Rice</td>
+                  <td>30</td>
+                  <td>Poori</td>
+                  <td>20</td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td>Appam</td>
+                  <td>18</td>
+                  <td>Lemon Rice</td>
+                  <td>33</td>
+                  <td>chappathi</td>
+                  <td>15</td>
+                </tr>
+              </tbody>
+            </table>
+            </div>
+          </div>
+        </div>
+        
+        <div class="col-lg col-md-5 col-sm-12 tab">
+          <div class="card">
+              <div class="card-header">Store 2</div>
+              <div class="card-body">
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Breakfast</th>
+                      <th scope="col">Cost</th>
+                      <th scope="col">lunch</th>
+                      <th scope="col">Cost</th>
+                      <th scope="col">Dinner</th>
+                      <th scope="col">Cost</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row">1</th>
+                      <td>Onion Dosa</td>
+                      <td>20</td>
+                      <td>Ghee Rice</td>
+                      <td>40</td>
+                      <td>Chappathi</td>
+                      <td>20</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">2</th>
+                      <td>Pongal</td>
+                      <td>25</td>
+                      <td>Meals</td>
+                      <td>60</td>
+                      <td>Parrota</td>
+                      <td>10</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">3</th>
+                      <td>Uthappam</td>
+                      <td>18</td>
+                      <td>Tomato rice</td>
+                      <td>33</td>
+                      <td>Idly vada</td>
+                      <td>18</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        
+        
+        <div class="col-lg col-md-5 col-sm-12 tab">
+          <div class="card">
+              <div class="card-header">Store 3</div>
+              <div class="card-body">
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Breakfast</th>
+                      <th scope="col">Cost</th>
+                      <th scope="col">lunch</th>
+                      <th scope="col">Cost</th>
+                      <th scope="col">Dinner</th>
+                      <th scope="col">Cost</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row">1</th>
+                      <td>Poori</td>
+                      <td>18</td>
+                      <td>Meals</td>
+                      <td>75</td>
+                      <td>Ragi Dosai</td>
+                      <td>15</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">2</th>
+                      <td>Pongal</td>
+                      <td>35</td>
+                      <td>Friedrice</td>
+                      <td>90</td>
+                      <td>Ghee Roast</td>
+                      <td>35</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">3</th>
+                      <td>Idiyappam</td>
+                      <td>40</td>
+                      <td>Briyani</td>
+                      <td>80</td>
+                      <td>Whaet Dosai</td>
+                      <td>30</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            
+          </div>
+        </div>
+        <div class="col-lg col-md-5 col-sm-12 tab">
+          <div class="card">
+              <div class="card-header">Store 4</div>
+              <div class="card-body">
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Breakfast</th>
+                      <th scope="col">Cost</th>
+                      <th scope="col">lunch</th>
+                      <th scope="col">Cost</th>
+                      <th scope="col">Dinner</th>
+                      <th scope="col">Cost</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row">1</th>
+                      <td>uthappam</td>
+                      <td>30</td>
+                      <td>Meals</td>
+                      <td>80</td>
+                      <td>Idly Vada</td>
+                      <td>20</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">2</th>
+                      <td>Pongal</td>
+                      <td>22</td>
+                      <td>Briyani</td>
+                      <td>50</td>
+                      <td>Kothu Parotta</td>
+                      <td>10</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">3</th>
+                      <td>Ghee Roast</td>
+                      <td>28</td>
+                      <td>mutton Briyani</td>
+                      <td>120</td>
+                      <td>Onion Dosa</td>
+                      <td>15</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            
+          </div>
+        </div>
+        </div>
+
+ 
+
 
 
 
@@ -71,15 +278,17 @@
 
     </div>
 
-  
-      
-      <script src="../../node_modules/bootstrap/js/dist/dropdown.js"></script>
-       <script src="../../node_modules/bootstrap/dist/js/bootstrap.js"></script>
-      <script src="../../node_modules/echarts/dist/echarts.js"></script>
-      <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script> -->
-         
-      <!-- // script one  -->
-    
-    
+  </div>
+
+
+
+  <script src="../node_modules/bootstrap/js/dist/dropdown.js"></script>
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="../node_modules/echarts/dist/echarts.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script> -->
+
+
+
 </body>
+
 </html>
